--- a/2.Animation Slider/animation-slider/src/App.css
+++ b/2.Animation Slider/animation-slider/src/App.css
@@ -14,3 +14,11 @@
 .right{
   width:100px
 }
+.char-img{
+  width:150px;
+  height:200px
+}
+.image-container{
+  display:flex;
+  justify-content:center
+}
